fix: resolve Python 3.13 namespace collision and update governance tests
- Remove __init__.py from governance test subdirectories (Python 3.13 namespace fix)
- Add normalize_environment_filter() for consistent env parameter handling
- Update catalog/analyzer/authorization handlers to use normalized filters
- Fix integration test to expect list format for environment filter display
- Delete outdated functional/governance tests (superseded by integration tests)
- Add classification_registry parameter to update_agent_tools for testing
- Update authorization tests to use validation_errors response structure

Test results: 373 passing (was 164), 0 import errors (was 17)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,20 +19,17 @@ dependencies = [
     "pyyaml>=6.0.0",
     "requests>=2.32.0",
     "aws-xray-sdk>=2.14.0",
-
     # Bedrock AgentCore SDK (AWS official)
     "bedrock-agentcore>=1.0.0",
     "bedrock-agentcore-starter-toolkit>=0.1.26",
-
     # Strands framework
     "strands-agents>=0.1.0",
     "strands-agents-tools>=0.1.0",
-
     # MCP protocol
     "mcp>=1.0.0",
-
     # Streamlit UI
     "streamlit>=1.40.0",
+    "playwright>=1.55.0",
 ]
 
 # Development dependencies for the entire workspace
