refactor: Rename project to AWS AgentCore Enterprise Toolkit
- Update project name from 'Amazon Bedrock AgentCore Template' to 'AWS AgentCore Enterprise Toolkit'
- Reflect enterprise-grade positioning and toolkit nature
- Update all Project tags in Terraform environments (dev, staging, prod)
- Update pyproject.toml package name and description
- Update README.md title and branding
- Update documentation references
- Update GitHub Copilot instructions

Repository will be renamed to: aws-agentcore-enterprise-toolkit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
-# Amazon Bedrock AgentCore Template - Workspace Root
-# UV workspace configuration for multi-agent projects
+# AWS AgentCore Enterprise Toolkit - Workspace Root
+# UV workspace configuration for multi-agent enterprise projects
 
 [project]
-name = "bedrock-agentcore-template"
+name = "aws-agentcore-enterprise-toolkit"
 version = "0.1.0"
-description = "Production-ready template for building Amazon Bedrock AgentCore agents"
+description = "Enterprise-grade infrastructure toolkit for building Amazon Bedrock AgentCore agents"
 readme = "README.md"
 requires-python = ">=3.13"
 license = { text = "Apache-2.0" }
