Add pytest to pre-commit with async test exclusion via markers

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,3 +61,13 @@ repos:
           - types-requests
         files: ^(packages|agents/customer-support)/.*\.py$
         exclude: ^agents/global-tools/
+
+  # Run pytest tests (excluding problematic async tests)
+  - repo: local
+    hooks:
+      - id: pytest
+        name: pytest
+        entry: uv run pytest tests/ -v --tb=short -x -m "not skip_precommit"
+        language: system
+        pass_filenames: false
+        always_run: true
