--- a/pytest.ini
+++ b/pytest.ini
@@ -8,3 +8,4 @@ testpaths =
     tests
 markers =
     e2e: End-to-end tests requiring the Streamlit app
+    skip_precommit: Tests that cause event loop conflicts in pre-commit hooks
