Run pytest pre-commit only for Python changes

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -70,4 +70,4 @@ repos:
         entry: uv run pytest tests/ -v --tb=short -x -m "not skip_precommit"
         language: system
         pass_filenames: false
-        always_run: true
+        files: \.py$
