Configure mypy for packages only, add type hints
- Run mypy exclusively on packages/ directory
- Skip agents/ to avoid hyphenated directory naming conflicts
- Add TypedDict definitions to warranty tools and check_warranty Lambda
- Add explicit type annotations in runtime.py, memory.py, and gateway.py
- Remove warranty-docs __init__.py to match customer-support structure
- All pre-commit hooks pass: Terraform, Ruff, mypy, pytest

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -59,8 +59,7 @@ repos:
           - boto3-stubs
           - types-pyyaml
           - types-requests
-        files: ^(packages|agents/customer-support)/.*\.py$
-        exclude: ^agents/global-tools/
+        files: ^packages/.*\.py$
 
   # Run pytest tests (excluding problematic async tests)
   - repo: local
